# discord-xiv-emotes

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx-data.json
.github/workflows/: main.yml
migrations/: 001_create_users.sql.up  001_create_users.up.sql  002_create_guilds.up.sql  003_create_emote_logs.down.sql  003_create_emote_logs.up.sql  004_create_emote_log_tags.down.sql  004_create_emote_log_tags.up.sql
src/: bin.rs  commands.rs  db.rs  emote_select.rs  handler.rs  lib.rs  main.rs  util.rs
src/commands/: emote_select.rs  global.rs  guild.rs  stats.rs  user_settings.rs
src/commands/global/: emote.rs  emote_select.rs  list_emotes.rs  server_settings.rs  stats.rs  user_settings.rs
src/commands/guild/: disable_emote_commands.rs  enable_emote_commands.rs  enable_guild_commands.rs  server_settings.rs  stats.rs
src/db/: models.rs  util.rs
src/handler/: commands.rs  emotes.rs
