[package]
name = "discord-xiv-emotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xiv-emote-parser = { git = "https://github.com/PsychicNoodles/xiv-emote-parser", features = ["xivapi"] }
serenity = "0.11.5"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
