[package]
name = "discord-xiv-emotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xiv-emote-parser = { git = "https://github.com/PsychicNoodles/xiv-emote-parser", features = ["xivapi"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "model", "cache", "utils", "rustls_backend"] }
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
thiserror = "1.0"
