[package]
name = "discord-xiv-emotes"
version = "0.1.0"
edition = "2021"
authors = ["Mattori Birnbaum <mattori.birnbaum@gmail.com>"]
description = "A Discord bot that responds with emote log messages from FFXIV"
repository = "https://github.com/PsychicNoodles/discord-xiv-emotes"
license = "GNU GPLv3"
keywords = ["discord", "bot"]

[lib]

## run project with `cargo shuttle run`, to run without shuttle uncomment below and then `cargo run`
[[bin]]
name = "discord-xiv-emotes"
path = "src/bin.rs"

[dependencies]
xiv-emote-parser = { version = "0.1", features = ["xivapi"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "model", "cache", "utils", "rustls_backend", "collector"] }
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
thiserror = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
futures = "0.3"
# shuttle-secrets = "0.7"
# shuttle-service = { version = "0.7", features = ["bot-serenity"] }
# shuttle-shared-db = { version = "0.7", features = ["postgres"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "time"] }
time = "0.3"
